--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-configs/__pycache__/config.cpython-311.pyc
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+.DS_Store
+
+# Database files
+*.db
+*.sqlite3
+
+# Config files (containing sensitive data)
 configs/config.py
+
+# Logs
+*.log
+logs/
+
+# Local environment files
+.env
+.env.local
+
+# Other
+.cursor/
